Commit from JBoss Tools

--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -10,7 +10,7 @@
     <h:body>
         <h2>Hello, please log in:</h2>
         <form method="post" action="j_security_check">
-            <table columns="2" role="presentation">
+            <table>
                 <tr>
                     <td><h:outputLabel for="j_username" 
                                        value="Please type your user name:"/></td>
