Commit from JBoss Tools

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,6 +5,6 @@
     <body>
         <a href="Server">Server</a>
         <br/>
-        <a href="Client.jsp">Client</a>
+        <a href="Client">Client</a>
     </body>
 </html>
