zmieniono formularz logowania

--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -1,36 +1,104 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
-  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-    xmlns:ui="http://java.sun.com/jsf/facelets"
-    xmlns:h="http://java.sun.com/jsf/html"
-    xmlns:f="http://java.sun.com/jsf/core"
-    xmlns:c="http://java.sun.com/jsp/jstl/core">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
 
-    <h:head>
-        <title>Login Form</title>
-    </h:head>
-    <h:body>
-        <h2>Hello, please log in:</h2>
+
+    <!-- General meta information -->
+    <title>Login Form by Oussama Afellad</title>
+    <meta name="keywords" content="" />
+    <meta name="description" content="" />
+    <!-- // General meta information -->
+
+
+    <!-- Load Javascript -->
+    <script type="text/javascript" src="./js/jquery.js"></script>
+    <script type="text/javascript" src="./js/jquery.query-2.1.7.js"></script>
+    <script type="text/javascript" src="./js/rainbows.js"></script>
+    <!-- // Load Javascipt -->
+
+    <!-- Load stylesheets -->
+    <link type="text/css" rel="stylesheet" href="css/style.css" media="screen" />
+    <!-- // Load stylesheets -->
+
+    <script type="text/javascript">
+
+
+        $(document).ready(function(){
+
+            $("#submit1").hover(
+                    function() {
+                        $(this).animate({"opacity": "0"}, "slow");
+                    },
+                    function() {
+                        $(this).animate({"opacity": "1"}, "slow");
+                    });
+        });
+
+
+    </script>
+
+</head>
+<body>
+
+<div id="wrapper">
+    <div id="wrappertop"></div>
+
+    <div id="wrappermiddle">
+
+        <h2>Login</h2>
+
         <form method="post" action="j_security_check">
-            <table columns="2" role="presentation">
-                <tr>
-                    <td><h:outputLabel for="j_username" 
-                                       value="Please type your user name:"/></td>
-                    <td><h:inputText id="j_username" autocomplete="off" 
-                                     size="20" /></td>
-                </tr>
-                <tr>
-                    <td><h:outputLabel for="j_password" 
-                                       value="Please type your password:"/></td>
-                    <td><h:inputSecret id="j_password" autocomplete="off" 
-                                       size="20"/></td>
-                </tr>
-            </table>
-            <h:panelGroup>
-                <h:commandButton type="submit" value="Submit"/>
-                &nbsp;
-                <h:commandButton type="reset" value="Reset"/>
-            </h:panelGroup>
+
+            <div id="username_input">
+
+                <div id="username_inputleft"></div>
+
+                <div id="username_inputmiddle">
+                    <input type="text" id="j_username" value="Username" onclick="this.value = ''"/>
+                    <img id="url_user" src="./images/mailicon.png" alt=""/>
+                </div>
+
+                <div id="username_inputright"></div>
+
+            </div>
+
+            <div id="password_input">
+
+                <div id="password_inputleft"></div>
+
+                <div id="password_inputmiddle">
+                    <input type="password" id="j_password" value="Password" onclick="this.value = ''"/>
+                    <img id="url_password" src="./images/passicon.png" alt=""/>
+                </div>
+
+                <div id="password_inputright"></div>
+
+            </div>
+
+            <div id="submit">
+
+                <input type="image" src="./images/submit_hover.png" id="submit1" value="Sign In"/>
+                <input type="image" src="./images/submit.png" id="submit2" value="Sign In"/>
+            </div>
+
         </form>
-    </h:body>
+
+        <!--div id="links_left">
+
+        <a href="#">Forgot your Password?</a>
+
+        </div>
+
+        <div id="links_right"><a href="#">Not a Member Yet?</a></div-->
+
+    </div>
+
+    <div id="wrapperbottom"></div>
+
+    <div id="powered">
+        <p>Powered by <a href="http://www.premiumfreebies.eu">Premiumfreebies Control Panel</a></p>
+    </div>
+</div>
+
+</body>
 </html>
