poprawka w formularzu logowania

--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -77,8 +77,8 @@
 
             <div id="submit">
 
-                <input type="image" src="./images/submit_hover.png" id="submit1" value="Sign In"/>
-                <input type="image" src="./images/submit.png" id="submit2" value="Sign In"/>
+                <input type="submit" id="submit1" value=""/>
+                <input type="submit" id="submit2" value=""/>
             </div>
 
         </form>
