poprawka w formularzu logowania

--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -54,7 +54,7 @@
                 <div id="username_inputleft"></div>
 
                 <div id="username_inputmiddle">
-                    <input type="text" id="j_username" value="Username" onclick="this.value = ''"/>
+                    <input type="text" name="j_username" id="j_username" value="Username" onclick="this.value = ''"/>
                     <img id="url_user" src="./images/mailicon.png" alt=""/>
                 </div>
 
@@ -67,7 +67,7 @@
                 <div id="password_inputleft"></div>
 
                 <div id="password_inputmiddle">
-                    <input type="password" id="j_password" value="Password" onclick="this.value = ''"/>
+                    <input type="password" name="j_password" id="j_password" value="Password" onclick="this.value = ''"/>
                     <img id="url_password" src="./images/passicon.png" alt=""/>
                 </div>
 
@@ -77,8 +77,8 @@
 
             <div id="submit">
 
-                <input type="submit" id="submit1" value=""/>
-                <input type="submit" id="submit2" value=""/>
+                <input type="submit" id="submit1" value=" "/>
+                <input type="submit" id="submit2" value=" "/>
             </div>
 
         </form>
