poprawiono link na stronie błędu logowania

--- a/src/main/webapp/error.xhtml
+++ b/src/main/webapp/error.xhtml
@@ -52,7 +52,7 @@
             created in the <code>file</code> realm and has been assigned to the
             <em>group</em> of <code>TutorialUser</code>.</p> <br/>
 
-        <p><a href="index.xhtml">Return to login page</a></p>
+        <p><a href="/">Return to login page</a></p>
     </div>
 
     <div id="wrapperbottom"></div>
