--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -4,7 +4,7 @@
 
 
     <!-- General meta information -->
-    <title>Login Form by Oussama Afellad</title>
+    <title>Login Form</title>
     <meta name="keywords" content="" />
     <meta name="description" content="" />
     <!-- // General meta information -->
